--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 .DS_Store
-/Source/Builds - Trace.xojo_project
-/Source/Builds - Trace.xojo_project.zip
+/Source/Builds - Trace
+/Source/Builds - Trace
